--- a/projet/templates/site/index.html.twig
+++ b/projet/templates/site/index.html.twig
@@ -10,26 +10,30 @@
 
 <div class="example-wrapper">
     <h1>Hello  ✅</h1>
-    {{ dump(sites) }}
-    {% for site in sites  %}
-        <div>name:{{ site.shortName }} - {{ site.name }}</div>
-        <div>workdays:</div>
-        <ul>
-            {% for workDay in site.workDays %}
-                <li>
-                    <span>{{workDay.date|date("d/m/Y")}}</span>
-                    <ul>
-                        {% for worker in workDay.workers %}
-                            <li>{{ worker }}</li>
-                        {% endfor %}
-                    </ul>
-                </li>
-            {% endfor %}
-        </ul>
+    {{ dump(site) }}
+    {#{% for site in sites  %}#}
+        {#<div>name:{{ site.shortName }} - {{ site.name }}</div>#}
+        {#<div>participants</div>#}
+        {#<ul>#}
+            {#{% for participant in site.participations %}#}
+                {#<li>#}
+                    {#<span>{{ participant.person }} : {{ participant.role }}</span>#}
+                {#</li>#}
+            {#{% endfor %}#}
+        {#</ul>#}
+        {#<div>workdays:</div>#}
+        {#<ul>#}
+            {#{% for workDay in site.workDays %}#}
+                {#<li>#}
+                    {#<span>{{workDay.date|date("d/m/Y")}}</span>#}
+
+                {#</li>#}
+            {#{% endfor %}#}
+        {#</ul>#}
 
 
-        <hr>
+        {#<hr>#}
 
-    {% endfor %}
+    {#{% endfor %}#}
 </div>
 {% endblock %}
