--- a/projet/templates/site/index.html.twig
+++ b/projet/templates/site/index.html.twig
@@ -10,7 +10,7 @@
 
 <div class="example-wrapper">
     <h1>Hello  ✅</h1>
-    {{ dump(site) }}
+    {{ dump(test) }}
     {#{% for site in sites  %}#}
         {#<div>name:{{ site.shortName }} - {{ site.name }}</div>#}
         {#<div>participants</div>#}
