juste pour etre sure

--- a/projet/templates/site/site_all.html.twig
+++ b/projet/templates/site/site_all.html.twig
@@ -48,7 +48,7 @@
         <h3>name:{{ site.shortName }} - {{ site.name }}</h3>
         <div>{{ site.address }} - {{ site.postCode }} {{ site.locality }} - {{ site.country }}</div>
         <div>is Active: {{ site.active ? '✅':'❌' }}</div>
-        <div> last work day : /!\ASK HOW TO/!\</div>
+        <div> last work day :</div>
         <h4>participants</h4>
         <ul>
             {% for participant in site.participations %}
