--- a/projet/templates/tests/template1.html
+++ b/projet/templates/tests/template1.html
@@ -5,6 +5,8 @@
     <title>WD LOG</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet">
+    <!--TODO link bootstrap-->
+    <!--TODO link fontawesome-->
 </head>
 <body>
 
