--- a/projet/templates/tests/css/style.css
+++ b/projet/templates/tests/css/style.css
@@ -1,4 +1,852 @@
+/*========================================*/
+/*============== VARIABLES ===============*/
+/*========================================*/
+/*========================================*/
+/*================ MIXINS ================*/
+/*========================================*/
+.cover {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.list-unstyled {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.img-responsive {
+  display: block;
+  max-width: 100%;
+}
+.overlay {
+  position: relative;
+}
+.overlay .container {
+  position: relative;
+}
+.overlay:before {
+  display: block;
+  content: "";
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.fontAwesome {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  content: "";
+  clear: both;
+  height: 0;
+}
+/*========================================*/
+/*================= TEXT =================*/
+/*========================================*/
 body {
+  color: #444;
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.4;
+}
+a {
+  color: #ec254e;
+  text-decoration: none;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+a:hover,
+a:active,
+a:focus {
+  color: #444;
+  text-decoration: none;
+}
+strong,
+b,
+.text-bold {
+  font-weight: 700;
+}
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: 700;
+}
+h1,
+.h1 {
+  font-size: 27px;
+  margin: 0 0 30px;
+  line-height: 1.7;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  h1,
+  .h1 {
+    font-size: 45px;
+    margin: 0 0 40px;
+  }
+}
+h2,
+.h2 {
+  font-size: 21px;
+  margin: 20px 0;
+  line-height: 1.7;
+}
+h2:first-child,
+.h2:first-child {
+  margin-top: 0;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  h2,
+  .h2 {
+    font-size: 30px;
+  }
+}
+h3,
+.h3 {
+  font-size: 15px;
+  margin: 0 0 20px;
+  line-height: 1.7;
+}
+h3:first-child,
+.h3:first-child {
+  margin-top: 0;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  h3,
+  .h3 {
+    font-size: 21px;
+  }
+}
+p,
+ul,
+ol {
+  margin: 0 0 20px;
+}
+/*========================================*/
+/*========= BOOTSTRAP OVERRIDES ==========*/
+/*========================================*/
+/* Grid */
+.container {
+  position: relative;
+  padding: 0 20px;
+}
+.row {
+  margin-left: -20px;
+  margin-right: -20px;
+}
+.row > [class*="col-"] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.row.gutter-vertical {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.row.gutter-vertical > [class*="col-"] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.row.gutter-small {
+  margin-left: -10px;
+  margin-right: -10px;
+}
+.row.gutter-small > [class*="col-"] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.row.gutter-small.gutter-vertical {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.row.gutter-small.gutter-vertical > [class*="col-"] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.row.gutter-none {
+  margin-left: 0;
+  margin-right: 0;
+}
+.row.gutter-none > [class*="col-"] {
+  padding-left: 0;
+  padding-right: 0;
+}
+/* Buttons */
+.btn {
+  font-size: 15px;
+  line-height: 1.2;
+  font-weight: 700;
+  padding: 8px 16px;
+  border-width: 1px;
+  border-radius: 4px;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+.btn-block {
+  display: block;
+  text-align: center;
+  white-space: normal;
+}
+.btn-sm {
+  font-size: 12px;
+  padding: 6px 12px;
+}
+.btn-lg {
+  font-size: 18px;
+  padding: 10px 20px;
+}
+.btn-default {
+  color: #444;
+  background-color: #fafafa;
+  border-color: #e6e6e6;
+}
+.btn-default:focus,
+.btn-default.focus,
+.btn-default:hover,
+.btn-default.hover,
+.btn-default:active,
+.btn-default.active {
+  color: #444;
+  background-color: #e6e6e6;
+  border-color: #c7c7c7;
+}
+.btn-default.disabled:hover,
+.btn-default[disabled]:hover,
+fieldset[disabled] .btn-default:hover,
+.btn-default.disabled:focus,
+.btn-default[disabled]:focus,
+fieldset[disabled] .btn-default:focus,
+.btn-default.disabled.focus,
+.btn-default[disabled].focus,
+fieldset[disabled] .btn-default.focus {
+  background-color: #fafafa;
+  border-color: #e6e6e6;
+}
+.btn-default.disabled .badge,
+.btn-default[disabled] .badge,
+fieldset[disabled] .btn-default .badge {
+  color: #fafafa;
+  background-color: #444;
+}
+.btn-primary {
+  color: white;
+  background-color: #ec254e;
+  border-color: #cc1238;
+}
+.btn-primary:focus,
+.btn-primary.focus,
+.btn-primary:hover,
+.btn-primary.hover,
+.btn-primary:active,
+.btn-primary.active {
+  color: white;
+  background-color: #d6133b;
+  border-color: #940d29;
+}
+.btn-primary.disabled:hover,
+.btn-primary[disabled]:hover,
+fieldset[disabled] .btn-primary:hover,
+.btn-primary.disabled:focus,
+.btn-primary[disabled]:focus,
+fieldset[disabled] .btn-primary:focus,
+.btn-primary.disabled.focus,
+.btn-primary[disabled].focus,
+fieldset[disabled] .btn-primary.focus {
+  background-color: #ec254e;
+  border-color: #cc1238;
+}
+.btn-primary.disabled .badge,
+.btn-primary[disabled] .badge,
+fieldset[disabled] .btn-primary .badge {
+  color: #ec254e;
   background-color: white;
-  font-family: Comfortaa, sans-serif;
+}
+.btn-secondary {
+  color: white;
+  background-color: #444;
+  border-color: #2b2b2b;
+}
+.btn-secondary:focus,
+.btn-secondary.focus,
+.btn-secondary:hover,
+.btn-secondary.hover,
+.btn-secondary:active,
+.btn-secondary.active {
+  color: white;
+  background-color: #303030;
+  border-color: #0c0c0c;
+}
+.btn-secondary.disabled:hover,
+.btn-secondary[disabled]:hover,
+fieldset[disabled] .btn-secondary:hover,
+.btn-secondary.disabled:focus,
+.btn-secondary[disabled]:focus,
+fieldset[disabled] .btn-secondary:focus,
+.btn-secondary.disabled.focus,
+.btn-secondary[disabled].focus,
+fieldset[disabled] .btn-secondary.focus {
+  background-color: #444;
+  border-color: #2b2b2b;
+}
+.btn-secondary.disabled .badge,
+.btn-secondary[disabled] .badge,
+fieldset[disabled] .btn-secondary .badge {
+  color: #444;
+  background-color: white;
+}
+/* Images */
+.img-thumbnail,
+.thumbnail {
+  border: 1px solid #cccccc;
+  padding: 2px;
+  background: #fff;
+  border-radius: 4px;
+  margin: 0;
+}
+a:hover .img-thumbnail,
+a:active .img-thumbnail,
+a:focus .img-thumbnail,
+a:hover .thumbnail,
+a:active .thumbnail,
+a:focus .thumbnail {
+  border-color: #999999;
+}
+.list-group-item,
+.list-group-item:first-child,
+.list-group-item:last-child {
+  border-radius: 4px;
+}
+/* Alerts */
+.alert {
+  padding: 15px;
+  color: #999999;
+  border: 1px solid rgba(153, 153, 153, 0.5);
+  background: rgba(153, 153, 153, 0.1);
+  font-weight: 400;
+}
+.alert a {
+  color: inherit;
+  font-weight: 700;
+}
+.alert a:hover,
+.alert a:active,
+.alert a:focus {
+  color: inherit;
+}
+.alert-success {
+  color: #57b03f;
+  border: 1px solid rgba(87, 176, 63, 0.5);
+  background: rgba(87, 176, 63, 0.1);
+  font-weight: 400;
+}
+.alert-success a {
+  color: inherit;
+  font-weight: 700;
+}
+.alert-success a:hover,
+.alert-success a:active,
+.alert-success a:focus {
+  color: inherit;
+}
+.alert-danger {
+  color: #c33939;
+  border: 1px solid rgba(195, 57, 57, 0.5);
+  background: rgba(195, 57, 57, 0.1);
+  font-weight: 400;
+}
+.alert-danger a {
+  color: inherit;
+  font-weight: 700;
+}
+.alert-danger a:hover,
+.alert-danger a:active,
+.alert-danger a:focus {
+  color: inherit;
+}
+.alert-info {
+  color: #c69214;
+  border: 1px solid rgba(198, 146, 20, 0.5);
+  background: rgba(198, 146, 20, 0.1);
+  font-weight: 400;
+}
+.alert-info a {
+  color: inherit;
+  font-weight: 700;
+}
+.alert-info a:hover,
+.alert-info a:active,
+.alert-info a:focus {
+  color: inherit;
+}
+.alert-warning {
+  color: #c69214;
+  border: 1px solid rgba(198, 146, 20, 0.5);
+  background: rgba(198, 146, 20, 0.1);
+  font-weight: 400;
+}
+.alert-warning a {
+  color: inherit;
+  font-weight: 700;
+}
+.alert-warning a:hover,
+.alert-warning a:active,
+.alert-warning a:focus {
+  color: inherit;
+}
+/*========================================*/
+/*================ LAYOUT ================*/
+/*========================================*/
+html,
+body,
+form {
+  height: 100%;
+}
+html body {
+  background: #fff;
+}
+/*========================================*/
+/*================ HEADER ================*/
+/*========================================*/
+#header {
+  position: fixed;
+  background: rgba(255, 255, 255, 0.95);
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  height: 80px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0);
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+/* Logo */
+#logo {
+  max-width: 100%;
+  max-height: 80px;
+  padding: 10px 60px 10px 0;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+#logo a,
+#logo img {
+  display: block;
+  max-width: 100%;
+  max-height: 60px;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  #logo {
+    position: absolute;
+    padding-right: 0;
+  }
+}
+.scrolled #header {
+  height: 60px;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.scrolled #logo {
+  max-height: 60px;
+}
+.scrolled #logo a,
+.scrolled #logo img {
+  max-height: 40px;
+}
+/*========================================*/
+/*============== NAVIGATION ==============*/
+/*========================================*/
+#navigation {
+  /* To fix "jump" when address-bar hides on mobile devices */
+  z-index: 110;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+@media only screen and (max-width: 768px), only screen and (min-width: 768px) and (max-width: 992px) {
+  #navigation {
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    position: fixed;
+    top: 0;
+    left: -300px;
+    height: 120%;
+  }
+  .shownav #header {
+    background: #fff;
+  }
+  .shownav #navigation {
+    left: 0;
+  }
+  .shownav body:before {
+    display: block;
+    content: "";
+    background: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 90;
+  }
+}
+/*========================================*/
+/*============ TOGGLE BUTTON =============*/
+/*========================================*/
+/* Toggle Button */
+#navigation-toggle {
+  display: block;
+  float: left;
+  height: 40px;
+  width: 40px;
+  border-radius: 4px;
+  background: rgba(236, 37, 78, 0.05);
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  z-index: 120;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+#navigation-toggle span {
+  width: 22px;
+  top: 50%;
+  left: 8px;
+  transform: translate(0, -1px);
+}
+#navigation-toggle span,
+#navigation-toggle span:before,
+#navigation-toggle span:after {
+  display: block;
+  content: "";
+  background: #ec254e;
+  height: 2px;
+  position: absolute;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+#navigation-toggle span:before {
+  width: 26px;
+  top: -8px;
+}
+#navigation-toggle span:after {
+  width: 18px;
+  bottom: -8px;
+}
+#navigation-toggle:hover {
+  background: rgba(236, 37, 78, 0.2);
+}
+#navigation-toggle:hover span,
+#navigation-toggle:hover span:before,
+#navigation-toggle:hover span:after {
+  background: #444;
+}
+.shownav #navigation-toggle {
+  background: #ec254e;
+}
+.shownav #navigation-toggle span {
+  background: transparent;
+}
+.shownav #navigation-toggle span:before,
+.shownav #navigation-toggle span:after {
+  background: white;
+  width: 24px;
+  top: 0;
+  bottom: 0;
+}
+.shownav #navigation-toggle span:before {
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.shownav #navigation-toggle span:after {
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.scrolled #navigation-toggle {
+  top: 10px;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  #navigation-toggle {
+    display: none;
+  }
+}
+/*========================================*/
+/*=============== MAINNAV ================*/
+/*========================================*/
+#nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+#nav ul li:not(:first-child) {
+  border-top: 1px solid rgba(236, 37, 78, 0.1);
+}
+#nav ul li a {
+  display: block;
+  font-size: 18px;
+  padding: 10px 20px;
+  line-height: 20px;
+}
+#nav ul li a:hover,
+#nav ul li a:active,
+#nav ul li a:focus {
+  color: #444;
+}
+#nav ul li.active a,
+#nav ul li.selected a {
+  color: white;
+  background: #ec254e;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  #nav {
+    padding-top: 80px;
+    display: flex;
+  }
+  #nav ul {
+    display: flex;
+  }
+  #nav ul.navigation-left {
+    flex-direction: row;
+  }
+  #nav ul.navigation-right {
+    flex-direction: row-reverse;
+  }
+  #nav ul > li {
+    display: inline-block;
+    border: none;
+  }
+  .scrolled #nav ul > li a {
+    padding: 20px;
+  }
+}
+/*========================================*/
+/*=============== SUBNAV =================*/
+/*========================================*/
+#subnav-toggle {
+  display: block;
+  color: #ec254e;
+  font-size: 1.2em;
+  background: rgba(236, 37, 78, 0.05);
+  line-height: 20px;
+  padding: 10px 60px 10px 10px;
+  cursor: pointer;
+  margin: 0 -10px 0;
+  position: relative;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+#subnav-toggle:before,
+#subnav-toggle:after {
+  display: block;
+  content: "";
+  height: 2px;
+  width: 16px;
+  position: absolute;
+  top: 20px;
+  background: #ec254e;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
+#subnav-toggle:before {
+  right: 18px;
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+#subnav-toggle:after {
+  right: 8px;
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+#subnav-toggle:hover {
+  color: #444;
+  background: rgba(236, 37, 78, 0.2);
+}
+#subnav-toggle:hover:before,
+#subnav-toggle:hover:after {
+  background: #444;
+}
+.showsubnav #subnav-toggle {
+  color: white;
+  background: #ec254e;
+}
+.showsubnav #subnav-toggle:before,
+.showsubnav #subnav-toggle:after {
+  background: white;
+  top: 19px;
+}
+.showsubnav #subnav-toggle:before {
+  right: 9px;
+  width: 22px;
+}
+.showsubnav #subnav-toggle:after {
+  content: "";
+  right: 9px;
+  width: 22px;
+}
+#subnav {
+  margin-bottom: 40px;
+  background: white;
+  padding: 0 10px;
+  border-radius: 4px;
+  overflow: hidden;
+  background: rgba(236, 37, 78, 0.05);
+}
+#subnav > ul {
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  -o-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+#subnav > ul ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  padding-left: 20px;
+  padding-bottom: 10px;
+}
+#subnav > ul ul a {
+  display: block;
+}
+#subnav > ul .active > a,
+#subnav > ul .selected > a {
+  font-weight: bold;
+}
+#subnav > ul > li {
+  border-top: solid 1px rgba(236, 37, 78, 0.1);
+}
+#subnav > ul > li:first-child {
+  border-top: none;
+}
+#subnav > ul > li > a {
+  display: block;
+  font-size: 1.2em;
+  padding: 10px 0;
+}
+#subnav.showsubnav > ul {
+  max-height: 600px;
+  /* For ScrollDown effect, this must be higher, than it will ever be */
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  #subnav-toggle {
+    display: none;
+  }
+  #subnav {
+    background: none;
+    padding: 0;
+  }
+  #subnav > ul {
+    max-height: none !important;
+  }
+  #subnav > ul ul {
+    display: none;
+  }
+  #subnav > ul ul a {
+    display: block;
+  }
+  #subnav > ul .active ul,
+  #subnav > ul .selected ul {
+    display: block;
+  }
+}
+/*========================================*/
+/*=============== CONTENT ================*/
+/*=======================================*/
+.main {
+  margin-top: calc(80px + 90px);
+}
+/*========================================*/
+/*================ FOOTER ================*/
+/*========================================*/
+#footer {
+  color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.2;
+  background-color: #222222;
+  padding: 20px 0 0 0;
+}
+#footer a {
+  color: inherit;
+}
+#footer a:hover,
+#footer a:active,
+#footer a:focus {
+  color: #ec254e;
+}
+#footer .address {
+  line-height: inherit;
+  margin-bottom: 20px;
+}
+#footer .address span {
+  display: block;
+}
+#footer .copyright {
+  line-height: inherit;
+  background-color: #000;
+  text-align: center;
+  margin-top: 20px;
+  padding: 10px 0;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px), only screen and (min-width: 1200px) {
+  #footer {
+    text-align: left;
+  }
+  #footer .address {
+    margin-bottom: 0;
+  }
 }
