--- a/projet/templates/tests/template1.html
+++ b/projet/templates/tests/template1.html
@@ -1,52 +1,87 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>WD LOG</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet">
-    <!--TODO link bootstrap-->
-    <!--TODO link fontawesome-->
-</head>
-<body>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-    <header>
-        <div id="logo">
-            <a>
-                <img/>
-                <span>WD LOG - Eco Logis</span>
-            </a>
-        </div>
-        <div id="logout">Log-out</div>
-        <nav>
-            <ul>
-                <li><a>Historique</a></li>
-                <li><a>Chantier</a></li>
-                <li><a>Personnes</a></li>
-                <li><a>Matériaux</a></li>
-            </ul>
-            <ul>
-                <li><a>param</a></li>
-                <li><a>notification</a></li>
-                <li><a>new-entry</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div id="main">
-        <aside id="aside-left">
-            
-        </aside>
-        <div id="content">
-            <h1>Bienvenue</h1>
-            <h2>vous avez X notifications</h2>
-            <div class="notification">
-                
+
+    <link rel="stylesheet" href="css/style.css">
+
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+            crossorigin="anonymous">
+    </script>
+    <script src="js/script.js"></script>
+
+    <title>TEST</title>
+
+</head>
+<body id="body" class="page_hom section_hom lang_de mode_normal status_success page page_3913">
+    <header id="header">
+        <div class="container">
+            <div id="logo">
+                <a href="/">
+                    <img src="/custom/images/header-logo.png" alt="logo" />
+                    <span>WD LOG - Eco Logis</span>
+                </a>
+            </div>
+            <div id="navigation-toggle"><span></span></div>
+            <div id="navigation">
+
+                <nav id="nav">
+                    <ul class="navigation-left">
+                        <li><a title="Historique" href="/Historique/">Historique</a></li>
+                        <li><a title="Chantier" href="/Chantier/">Chantier</a></li>
+                        <li><a title="Personnes" href="/Personnes/">Personnes</a></li>
+                        <li><a title="Matériaux" href="/Matériaux/">Matériaux</a></li>
+                    </ul>
+                    <ul class="navigation-right">
+                        <li><a title="new-entry" href="/new-entry/">new-entry</a></li>
+                        <li><a title="notification" href="/notification/">notification</a></li>
+                        <li><a title="param" href="/param/">param</a></li>
+
+                    </ul>
+                </nav>
             </div>
         </div>
-        <aside id="aside-right">
-        </aside>
+    </header>
+
+    <div class="main">
+        <div class="container">
+            <div class="row">
+                <aside id="aside-left" class="col-md-3">
+
+                </aside>
+                <div id="content" class="col-md-6">
+                    <section>
+                        <h1>
+                            Home
+                        </h1>
+                        <div>
+                            <div>
+                                <p>Maecenas id consequat felis. Sed non neque vel sapien rutrum lobortis at viverra erat. Nullam non varius nisl. Ut non nibh elit. Morbi fermentum pharetra pulvinar. Etiam sagittis leo libero, varius convallis augue fringilla non. Sed porttitor tincidunt faucibus. Nullam sodales tincidunt urna, eget gravida dolor semper sed. In porta mauris vel tempor scelerisque.</p>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <aside id="aside-right" class="col-md-3">
+                </aside>
+
+            </div>
+        </div>
 
     </div>
+    <footer id="footer">
+        <div class="copyright">
+            <div class="container">
+                <span>Copyright &#169; 2016-2018 Proline. Alle Rechte vorbehalten.</span> <span><a title="MUM ProLine" class="pagelink" href="/impressum/">Impressum &amp; Datenschutz</a></span> <span id="C_T_agencymum" class="agencymum"><a title="Web &amp; Design Agentur" href="http://www.mum.lu/" target="_blank">Web Agentur <b>mum.lu</b></a></span>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
